--- a/feed.html
+++ b/feed.html
@@ -16,7 +16,11 @@
         <input type="text" id="name" name="name" required minlength="10" maxlength="19" size="18" />
         <button type="submit">Submit</button>
     </p>
-    
+ <section>
+  <a href=""
+    <img src=""><br>
+  </a>
+ </section>   
     
 </body>
 </html>
