--- a/index.html
+++ b/index.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html> <!-- defines that the document is html-->
 <html lang="en">
 <head> <!--metadata-->
-     <title>Perspective Homepage</title> 
-     
-<style>
- p{
-    color: white;
-    background-color: rgb(168, 168, 237);
- }
-</style>  
- </head>
+     <title>Perspective Homepage</title>
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Nokora:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+     <link rel="stylesheet" href="assets/styles/styles.css" > 
+</head>
 <body>
     <!--all content thats visible on your webpage goes into body-->
-    <h1> welcome </h1> 
+    <h1> P
+        E
+        R
+        S
+        P
+        E
+        C
+        T
+        I
+        V
+        E
+     </h1> 
 
     <p> 
        Perspective is meant to <b> save time </b> in finding movies
