--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html> <!-- defines that the document is html-->
 <html lang="en">
+  
 <head> <!--metadata-->
+<div class="stroke-behind"></div>
      <title>Perspective Homepage</title>
      <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Nokora:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="assets/styles/styles.css" > 
-</head>
+<link rel="stylesheet" href="assets/styles/styles.css" > 
+<link rel="stylesheet" href="assets/styles/transform.css">
+   
+    </head>
 <body>
     <!--all content thats visible on your webpage goes into body-->
-    <h1> P
-        E
+    <h1>P<span style="color:#E5FAFF"
+      class="rotate-90">E</span><span
+      class="rotate180">R</span>S<span
+      class="rotate90">P</span><span
+      class="rotate180">E</span><span
+      class="rotate90">C</span>TI<span
+      class="rotate180">V</span><span
+      class="rotate-90">E</span></h1></span   
+        P
+        E 
         R
         S
         P
@@ -19,10 +31,9 @@
         T
         I
         V
-        E
-     </h1> 
-
-    <p> 
+        E 
+      
+    p> 
        Perspective is meant to <b> save time </b> in finding movies
        <a href="Perspective.html">view movies here</a>
     </p>
@@ -37,6 +48,16 @@
         <li class="Pages"><a href="#"> Page 3</a></li>
       </ol>
     </nav>
+    <div style="text-align:justify">
+    In only three pages, 
+      you will find a glimpse in what could be- 
+      the most efficient site to find new movies- 
+      with no hassle, and no time wasted. 
+      If you’ve been let down one too many times
+      in the past, with either trusting reviews that lead 
+      you to no good result, or just entirely giving up after an 
+      hour looking, this website would be created for you!</h2>
+    </p>
 
  <button class="Page 2" type="button">Page 2</button> 
 </nav>        
