--- a/index.html
+++ b/index.html
@@ -49,17 +49,14 @@
     
     <section class="idea" id= "perspective">
      
-      <h2>The Quest For The Perfect Movie</h2>
-      <p>
-      In only three pages,
-      you will find a glimpse in what could be- 
-      the most efficient site to find new movies- 
-      with no hassle, and no time wasted. 
-      If you’ve been let down one too many times
-      in the past, with either trusting reviews that lead 
-      you to no good result, or just entirely giving up after an 
-      hour looking, this website would be created for you!
-    </p>
+      <h2>The Quest For The Perfect Movie:</h2>
+      <p><b>
+        in only three pages, you will find a glimpse in what could be-
+         the most efficient site to find new movies- with no hassle , and
+          no time wasted. If you’ve been let down one too many times in the past,
+           with either trusting reviews that lead you to no good result, or just entirely 
+           giving up after an hour of looking, this website would be created for you! 
+    </p></b>
   </section>
   
     <section class="content-box" id=".content-box">
@@ -69,9 +66,10 @@
         <li>Creating Your Movie List and profile </li>
         <li>Genre-Specific Recommendations</li>
         <li>Feedback </li></ol>
-      </section>
-      <section>
-      <div class="film-flex" id=".film"><img src="assets/images/clip_art_film 1 (3).png" alt="film"></div></section>
+    </section>
+    <section class="film-flex" >
+      <img id="film" src="assets/images/clip_art_film 1 (3).png" alt="film">
+    </section>
      <section class="text" id="why">
         <h1>
           <b>Finding Your Ideal Film Experience</b>
@@ -83,7 +81,6 @@
          like a treasure hunt. In this guide, we'll explore different strategies 
          to help you find the ideal movie for any occasion.
       </p>
-     </section>
      <section id="newsletter-subscribe">
         <h2>Subcribe to Out Newsletter</h2>
         <label for="newsletter">Enter your Email</label>
