--- a/Find.new.html
+++ b/Find.new.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">  
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Finding New Films</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Nokora:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+         <link rel="stylesheet" href="assets/styles/explore.css" > 
+    </head>
+<body  id="second-page" style="background-image: linear-gradient( #4B779B, #333651)" >
     <nav>
         <a href="index.html">Go to Perspectives Homepage</a>
         <br>
         <a href="feed.html">Go to Feed Page</a>
         <div style="position:absolute;top:0;right:0;left:3;"></div>
     </nav>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Finding New Films</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Nokora:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="assets/styles/styles.css" > 
-</head>
-<body>
+<section>
     <h1>Explore</h1>
     
-</body>
-<body>
-    <header>
-    <nav></nav>
-    </header>
-    <main></main>
-
-</body>
+  <div class="feature-flex">
+    <article><img id="article" src="assets/images/shutterisland 1.png"></article>
+    <article><img id="article" src="assets/images/hqdefault 1.png"></article>
+    <article><img id="article" src="assets/images/dfrgj3y-b5bc1102-7f18-4706-888a-c4d90d76b4f2.png"></article>
+    <article><img id="article" src="assets/images/images (1).jpeg"></article>
+    <article><img id="article" src="assets/images/unnamed (1).jpg"></article>
+    <article>Article 6</article>
+    <article>Article 7</article>
+  </div>
+</section>
+    <main>
+    
 </html>
