--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
            <img id="logo" src="assets/images/logo.png" alt="logo">
       
         <a class="active" id="styles" href="#home">Home</a>
-        <a href="#about">About</a>
+        <a href="#about">Create Account</a>
         <a href="#contact">Contact</a>
         <a href="Find.new.html">Explore</a>
+        <a href="members.html">Members</a>
       </article> 
        <label  style="padding-left: 800px;" for="text">search films</label>
        <input type="search" id="text" placeholder="Search..">
