--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
      <p> </p>
      <img id="film" src="assets/images/clip_art_film 1 (3).png" alt="film">
 </article>
-    <section class="content-box" id=".content-box">
-      <label for="content-box">Table of Contents</label>
+    <section class="content-box" >
+      <h1 id=".content-box" for="content-box">Table of Contents</h1>
       <ol>
         <li>Why PERSPECTIVE? </li>
         <li>Creating Your Movie List and profile </li>
