--- a/Find.new.html
+++ b/Find.new.html
@@ -9,7 +9,32 @@
     <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Nokora:wght@100;300;400;700;900&display=swap" rel="stylesheet">
          <link rel="stylesheet" href="assets/styles/explore.css" > 
          <body  style="background: linear-gradient( #79c6d7 , #4B779B, #3f5676,  #333651, #22253b,  #333651)">
-            <header>
+            <section>
+                <article> 
+              <button class="button button1">
+                <a href="feed.html">Go to Feed Page</a></button>
+              <button class="button button1">
+                <a href="#tv-shows">Tv Shows</a></button>
+              <button class="button button2">
+                <a href="#movies">Go To Movies</a></button>
+              
+              <form id="film_select">
+              <h1> genres </h1>
+              <select name="genres">
+              <option  value="Honda">Honda</option>
+              <option  value="Hyundai">Hyundai</option>
+              <option  value="Jaguar">Jaguar</option>
+              <option  value="Jeep">Jeep</option>
+              <option  value="Kia">Kia</option>
+              <option  value="Honda">Honda</option>
+              <option  value="Hyundai">Hyundai</option>
+              <option  value="Jaguar">Jaguar</option>
+              <option  value="Jeep">Jeep</option>
+              <option  value="Kia">Kia</option>
+              </select> 
+              <input type="submit" />   
+              </form> </section>
+               <header>
              <section>
              <article> 
               <nav>
